--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "~0.63.4",
     "react-native-dropdown-picker": "^5.1.5",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-modal": "^11.10.0",
     "react-native-reanimated": "~2.1.0",
     "react-native-responsive-fontsize": "^0.5.0",
     "react-native-responsive-screen": "^1.4.2",
